# lobe-chat

./: .gitignore
docker-compose/installer/: README.md  main.py  pyproject.toml
docker-compose/installer/lobe_setup/: config.py  i18n.py  installer.py  setup.py
docker-compose/installer/lobe_setup/docs/dev/: development_log.md
docker-compose/installer/lobe_setup/managers/: __init__.py  config_manager.py  display_manager.py  file_manager.py  host_manager.py  port_manager.py  secret_manager.py
docker-compose/installer/lobe_setup/managers/file_managers/: __init__.py  docker_compose_manager.py  env_manager.py  init_data_manager.py
