[project]
name = "lobe-setup"
version = "0.1.0"
description = "Setup script for Lobe Chat Docker environment"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "inquirer>=3.1.3",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lobe-setup = "main:main"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["lobe_setup"]
